--- a/app/index.html
+++ b/app/index.html
@@ -11,19 +11,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyDsQ5ax35WLFpisanUME8eU3ecZJ6DTiA8",
-        authDomain: "bloc-chat-a8e35.firebaseapp.com",
-        databaseURL: "https://bloc-chat-a8e35.firebaseio.com",
-        projectId: "bloc-chat-a8e35",
-        storageBucket: "bloc-chat-a8e35.appspot.com",
-        messagingSenderId: "267976497844"
-      };
-      firebase.initializeApp(config);
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+      <script>
+        // Initialize Firebase
+        var config = {
+          apiKey: "AIzaSyDsQ5ax35WLFpisanUME8eU3ecZJ6DTiA8",
+          authDomain: "bloc-chat-a8e35.firebaseapp.com",
+          databaseURL: "https://bloc-chat-a8e35.firebaseio.com",
+          projectId: "bloc-chat-a8e35",
+          storageBucket: "bloc-chat-a8e35.appspot.com",
+          messagingSenderId: "267976497844"
+        };
+        firebase.initializeApp(config);
+      </script>
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/services/Room.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
 </body>
 </html>
