--- a/app/index.html
+++ b/app/index.html
@@ -34,5 +34,7 @@
     <script src="/scripts/controllers/RoomCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
+    <script src="/scripts/controllers/UserModalInstance.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
 </body>
 </html>
