--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/controllers/RoomCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
+    <script src="/scripts/controllers/MsgCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
     <script src="/scripts/controllers/UserModalInstance.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
